fix line spacing 2

--- a/About Page/style.css
+++ b/About Page/style.css
@@ -9,7 +9,7 @@ body{
 	color:white;
 	font-size:20px;
 	font-family: supermarket;
-	line-height: 30px;
+	line-height: 150%;
 }
 
 .allContent{
@@ -48,13 +48,13 @@ body{
 	text-align: center;
 	padding-top: 50px;
 	color: white;
-	line-height: 60px;
-/*	height:300px;*/
+/*	line-height: 60px;*/
+	height:280px;
 }
 
 .banner h1,h2{
-	margin-top:0px;
-	margin-bottom:0px;
+/*	margin-top:0px;
+	margin-bottom:0px;*/
 }
 
 .banner h1{
@@ -93,7 +93,6 @@ body{
 .logo:hover{
 	border-color:white;
 	box-shadow: 0 0 50px #316696;
-/*	border-width: 2px;*/
 }
 
 .logo img{
